# PerturbQA

./: .gitignore  README.md  pyproject.toml
examples/: README.md  create_prompt.py  gene_set.ipynb  gene_summary.ipynb  kg_analysis.ipynb  kg_to_prompt.ipynb  results.ipynb
examples/sanity_check/: README.md  data.py  environment.yml  inference.py  inference.sh  inference_batch.py  parser.py  train.py  train_sweep_gnn.sh  train_sweep_mlp.sh  utils.py
examples/sanity_check/config/: kg_gnn.yaml  kg_gnn_pathway.yaml  mlp.yaml  mlp_pathway.yaml
examples/sanity_check/data/: 20240712-nadig_hepg2.csv  20240712-replogle_k562_gw_path.csv  20240717-replogle_k562_gw_path.csv  inference.yaml  kg_path.yaml
examples/sanity_check/model/: factory.py  gnn.py  gnn_pathway.py  mlp.py  mlp_pathway.py
examples/summer/: README.md  find_neighbors.py  parsing.py  run_llama70b.py  run_llama8b.py
examples/summer/inputs/: sample.json
examples/summer/inputs/diff_exp/: AARS2_AAK1_example.json
examples/summer/inputs/gene_set_description/: input_only.json
examples/summer/outputs/diff_exp/: llama-3-70b.json  llama-3-8b.json
examples/summer/prompts/: enrich.py  llm-no_cot.py  llm-no_retrieve.py  retrieve.py  summarize.py  summer_qa.py
perturbqa/: __init__.py  data.py  eval.py
perturbqa/datasets/: hepg2-de.csv  hepg2-dir.csv  jurkat-de.csv  jurkat-dir.csv  k562-de.csv  k562-dir.csv  k562_gene-gse.json  k562_gw_mapping_full.json  k562_pert-gse.json  k562_set-de.csv  k562_set-dir.csv  k562_set-mapping.json  rpe1-de.csv  rpe1-dir.csv
(+4 files in other folders)
